# prismasase

./: README.md  check_vt_hashes.py  get_ping_drops.py  scm_api_sdwan_add-sub.py  scm_get_element_status.py  scm_get_interface_status  scm_monitor.py  scm_monitor_circuit_metrics.py  scm_sdwan_bind_localSecPrefix.py  scm_sdwan_get-sites-elements-labels-health.py  scm_sdwan_get_ion-devices.py  scm_sdwan_get_unclaimed_ions.py  scm_sdwan_inventory_status.py  scm_sdwan_ion_replacment.py  scm_sdwan_ion_ztp.py  scm_sdwan_sitebw_metrics.py  scm_sdwan_topology.py  scm_sdwan_update_endpoints.py  sdk-associate-elementsecurityzone.py  sdk-get-interfacestatus  sdk-get-interfacestatus.py  sdwan_auditlogs.py
access/: sase_base.py
pab/: get_app_list.py
postman/: readme  vfsSASE-env-postman-env-variables.postman_environment.json  vfs_Prisma-SASE-Collection.postman_collection.json
pov-automation/: dns-resolver-globallist.py  read.me  scm_routing_audit.py  sdwan_add-sub-vlan.py  sdwan_device_telemetry.py  sdwan_inventory-tags.py  sdwan_ion_replace.py  sdwan_ion_ztp.py
pov-automation/02_policy_scripts/: push_policy_refactored_original-gemini.py  push_resources.py  push_resources_refactored.py  restore_policy_all.py  sdwan_master_policy.py
pov-automation/03_config_tool/: Azure-EastAU.yml  do_site.py  setup.cfg  setup.py
pov-automation/03_config_tool/prisma_config/: pull.py
sdwan/config_import_export/: prismasase_settings.py  pull_resources_refactored.py  push_policy_refactored.py
vion-azure-templates/: 2WAN-2LAN-VION-template.json  2WAN-2LAN-parameters.json  read.me
(+46 files in other folders)
