[metadata]
name = prisma_config
description = Configuration exporting and Continuous Integration (CI) capable configuration importing for the Prisma SDWAN Cloud Controller.
version = 6.5.1b2
author = Prisma SASE Developer Support
author-email = prisma-sase-developers@paloaltonetworks.com
description-file = README.md
